# rootkids

./: README.md  pyproject.toml
src/rootkids/: __init__.py
src/rootkids/core/: __init__.py  race.py  utils.py
src/rootkids/web/: __init__.py  http.py  websocket.py
