[project]
name = "rootkids"
version = "0.1.2"
description = ""
authors = [
    {name = "ardhptr21",email = "ardhiputrapradana21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pyngrok (>=7.5.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "rootkids", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
